--- a/imgversion.conf
+++ b/imgversion.conf
@@ -7,10 +7,10 @@ IMAGE_MINIO=quay.io/minio/minio:latest
 IMAGE_MINIO_MC=quay.io/minio/mc:latest
 
 IMAGE_HIVE=apache/hive:4.1.0
-IMAGE_TRINO=trinodb/trino:latest
+IMAGE_TRINO=trinodb/trino:455
 
 IMAGE_ELASTICSEARCH=docker.elastic.co/elasticsearch/elasticsearch:8.19.4
-IMAGE_OPENMETADATA=openmetadata/server:latest
+IMAGE_OPENMETADATA=openmetadata/server:1.5.3
 
 IMAGE_TEMPORAL=temporalio/auto-setup:1.26.3
 
@@ -19,3 +19,8 @@ IMAGE_AIRBYTE_WORKER=airbyte/worker:1.8.2
 
 # 可选
 IMAGE_OLLAMA=ollama/ollama:latest
+IMAGE_LOKI=grafana/loki:2.9.8
+IMAGE_PROMTAIL=grafana/promtail:2.9.8
+IMAGE_PROMETHEUS=prom/prometheus:v2.54.1
+IMAGE_GRAFANA=grafana/grafana:11.2.0
+IMAGE_CADVISOR=gcr.io/cadvisor/cadvisor:v0.49.1
