--- a/docker-compose.cluster.yml
+++ b/docker-compose.cluster.yml
@@ -19,8 +19,8 @@ services:
       - "${TLS_PORT}:443"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock:ro
-      - ./tls/certs/server.crt:/certs/server.crt:ro
-      - ./tls/certs/server.key:/certs/server.key:ro
+      - ./services/yts-proxy/data/certs/server.crt:/certs/server.crt:ro
+      - ./services/yts-proxy/data/certs/server.key:/certs/server.key:ro
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.default-secure.tls=true"
@@ -52,7 +52,7 @@ services:
       MINIO_REGION_NAME: ${S3_REGION}
       MINIO_SERVER_URL: https://${HOST_MINIO}
     volumes:
-      - ./data/minio:/data
+      - ./services/yts-minio/data:/data
     healthcheck:
       test: ["CMD","curl","-fsS","http://localhost:9000/minio/health/live"]
       <<: *hc
@@ -81,7 +81,7 @@ services:
       S3_BUCKET: ${S3_BUCKET}
     entrypoint: ["/bin/sh","-c","/init.sh"]
     volumes:
-      - ./minio/init.sh:/init.sh:ro
+      - ./services/yts-minio-init/init/init.sh:/init.sh:ro
     restart: "no"
 
   yts-metastore:
@@ -95,7 +95,7 @@ services:
       yts-minio:
         condition: service_started
     volumes:
-      - ./trino/catalog:/etc/trino/catalog
+      - ./services/yts-trino/init/catalog:/etc/trino/catalog
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
@@ -135,7 +135,7 @@ services:
       AIRBYTE_CLOUD_STORAGE_S3_ENDPOINT: http://yts-minio:9000
       AIRBYTE_CLOUD_STORAGE_S3_PATH_STYLE_ACCESS: "true"
     volumes:
-      - ./airbyte/workspace:/data/airbyte/workspace
+      - ./services/yts-airbyte-server/data/workspace:/data/airbyte/workspace
     depends_on:
   yts-airbyte-worker:
     image: ${IMAGE_AIRBYTE_WORKER}
@@ -161,7 +161,7 @@ services:
       AIRBYTE_CLOUD_STORAGE_S3_ENDPOINT: http://yts-minio:9000
       AIRBYTE_CLOUD_STORAGE_S3_PATH_STYLE_ACCESS: "true"
     volumes:
-      - ./airbyte/workspace:/data/airbyte/workspace
+      - ./services/yts-airbyte-server/data/workspace:/data/airbyte/workspace
     depends_on:
       yts-airbyte-server:
         condition: service_started
@@ -181,7 +181,7 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
     volumes:
-      - ./openmetadata/es:/usr/share/elasticsearch/data
+      - ./services/yts-om-es/data:/usr/share/elasticsearch/data
     healthcheck:
       test:
         - CMD-SHELL
