--- a/imgversion.conf
+++ b/imgversion.conf
@@ -7,10 +7,10 @@ IMAGE_MINIO=quay.io/minio/minio:latest
 IMAGE_MINIO_MC=quay.io/minio/mc:latest
 
 IMAGE_HIVE=apache/hive:4.1.0
-IMAGE_TRINO=trinodb/trino:455
+IMAGE_TRINO=trinodb/trino:latest
 
 IMAGE_ELASTICSEARCH=docker.elastic.co/elasticsearch/elasticsearch:8.19.4
-IMAGE_OPENMETADATA=openmetadata/server:1.5.3
+IMAGE_OPENMETADATA=openmetadata/server:latest
 
 IMAGE_TEMPORAL=temporalio/auto-setup:1.26.3
 
