--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,7 +62,7 @@ services:
       - ./services/yts-pg/data:/var/lib/postgresql/data
       - ./services/yts-pg/init:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL","pg_isready -U ${PG_SUPER_USER} -d postgres"]
+      test: ["CMD-SHELL","/docker-entrypoint-initdb.d/99-ensure-users-runtime.sh"]
       <<: *hc
     restart: unless-stopped
     networks:
